feat(events-session): Events Session component created

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,7 +17,7 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@styles/*": ["ui/styles/*"]
+      "@styles/*": ["ui/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
